--- a/index.html
+++ b/index.html
@@ -43,108 +43,124 @@
 
     <main>
 <!-- ============================== HERO ============================== -->
-        <div class="hero-bg">
-            <section class="hero container">
-                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br/>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-                <button class="modal-btn" type="button">Заказать услугу</button>
-            </section> 
+    <section class="hero">
+        <div class="hero-content container">
+            <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br/>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <button class="modal-btn" type="button">Заказать услугу</button>
         </div>
+
+    </section> 
 <!-- ============================== END HERO ============================== -->         
 
 <!-- ============================== ADVANTANGES ============================== -->
-        <section class="advantages container">
-            <h2 class="advantages-title" hidden>Преимущества</h2>
-            <ul class="advantages-list list">
-                <li class="advantages-item">
-                    <h3 class="advantages-item-title">Внимание к деталям</h3>
-                    <p class="advantages-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="advantages-item">
-                    <h3 class="advantages-item-title">Пунктуальность</h3>
-                    <p class="advantages-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="advantages-item">
-                    <h3 class="advantages-item-title">Планирование</h3>
-                    <p class="advantages-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="advantages-item">
-                    <h3 class="advantages-item-title">Современные технологии</h3>
-                    <p class="advantages-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
+        <section class="advantages">
+            <div class="advantages-content container">
+                <h2 class="advantages-title" hidden>Преимущества</h2>
+                <ul class="advantages-list list">
+                    <li class="advantages-item">
+                        <h3 class="advantages-item-title">Внимание к деталям</h3>
+                        <p class="advantages-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li class="advantages-item">
+                        <h3 class="advantages-item-title">Пунктуальность</h3>
+                        <p class="advantages-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li class="advantages-item">
+                        <h3 class="advantages-item-title">Планирование</h3>
+                        <p class="advantages-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li class="advantages-item">
+                        <h3 class="advantages-item-title">Современные технологии</h3>
+                        <p class="advantages-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 <!-- ============================== END ADVANTANGES ============================== -->        
 
 <!-- ============================== WHAT-WE-DO ============================== -->
-        <section class="works container">
-            <h2 class="works-title">Чем мы занимаемся</h2>
-            <ul class="works-list list">
-                <li class="workrs-item">
-                    <img class="works-img"
-                        src="./images/what-we-do/what-we-do-img1.jpg" 
-                        alt="Пользователь ПК" 
-                        width="370" height="294">
-                </li>
-                <li class="workrs-item">
-                    <img class="works-img"
-                        src="./images/what-we-do/what-we-do-img2.jpg" 
-                        alt="Пользователь с телефоном" 
-                        width="370" height="294">
-                </li>
-                <li class="workrs-item">
-                    <img class="works-img"
-                        src="./images/what-we-do/what-we-do-img3.jpg" 
-                        alt="Пользователь с планшетом"
-                        width="370" height="294">
-                </li>
-            </ul>
+        <section class="works">
+            <div class="works-content container">
+                <h2 class="works-title">Чем мы занимаемся</h2>
+                <ul class="works-list list">
+                    <li class="workrs-item">
+                        <img class="works-img"
+                            src="./images/what-we-do/what-we-do-img1.jpg" 
+                            alt="Пользователь ПК" 
+                            width="370" height="294">
+                    </li>
+                    <li class="workrs-item">
+                        <img class="works-img"
+                            src="./images/what-we-do/what-we-do-img2.jpg" 
+                            alt="Пользователь с телефоном" 
+                            width="370" height="294">
+                    </li>
+                    <li class="workrs-item">
+                        <img class="works-img"
+                            src="./images/what-we-do/what-we-do-img3.jpg" 
+                            alt="Пользователь с планшетом"
+                            width="370" height="294">
+                    </li>
+                </ul>
+            </div>
         </section>
 <!-- ============================== END WHAT-WE-DO ============================== -->
 
 <!-- ============================== TEAM ============================== -->
-        <section class="team container">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list list">
-                <li class="team-item">
-                    <img class="team-img" 
-                        src="./images/team/team-img1.jpg" 
-                        alt="фото Игорь Демьяненко"
-                        width="268" height="258">
-                    <h3 class="team-img-title">Игорь Демьяненко</h3>
-                    <p class="team-img-text" lang="en">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-img"
-                        src="./images/team/team-img2.jpg" 
-                        alt="фото Ольга Репина" 
-                        width="268" height="258">
-                    <h3 class="team-img-title">Ольга Репина</h3>
-                    <p class="team-img-text" lang="en">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-img"
-                        src="./images/team/team-img3.jpg" 
-                        alt="фото Николай Тарасов"
-                        width="268" height="258">
-                    <h3 class="team-img-title">Николай Тарасов</h3>
-                    <p class="team-img-text" lang="en">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-img"
-                        src="./images/team/team-img4.jpg" 
-                        alt="фото Михаил Ермаков"
-                        width="268" height="258">
-                    <h3 class="team-img-title">Михаил Ермаков</h3>
-                    <p class="team-img-text" lang="en">UI Designer</p>
-                </li>
-            </ul>
+        <section class="team">
+            <div class="team-content container">                
+                <h2 class="team-title">Наша команда</h2>
+                <ul class="team-list list">
+                    <li class="team-item">
+                        <img class="team-img" 
+                            src="./images/team/team-img1.jpg" 
+                            alt="фото Игорь Демьяненко"
+                            width="270" height="260">
+                        <div class="team-img-thumb">
+                            <h3 class="team-img-title">Игорь Демьяненко</h3>
+                            <p class="team-img-text" lang="en">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-img"
+                            src="./images/team/team-img2.jpg" 
+                            alt="фото Ольга Репина" 
+                            width="270" height="260">
+                            <div class="team-img-thumb">
+                                <h3 class="team-img-title">Ольга Репина</h3>
+                                <p class="team-img-text" lang="en">Frontend Developer</p>
+                            </div>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-img"
+                            src="./images/team/team-img3.jpg" 
+                            alt="фото Николай Тарасов"
+                            width="270" height="260">
+                            <div class="team-img-thumb">
+                                <h3 class="team-img-title">Николай Тарасов</h3>
+                                <p class="team-img-text" lang="en">Marketing</p>
+                            </div>                       
+                    </li>
+                    <li class="team-item">
+                        <img class="team-img"
+                            src="./images/team/team-img4.jpg" 
+                            alt="фото Михаил Ермаков"
+                            width="270" height="260">
+                            <div class="team-img-thumb">
+                                <h3 class="team-img-title">Михаил Ермаков</h3>
+                                <p class="team-img-text" lang="en">UI Designer</p>
+                            </div>
+                        
+                    </li>
+                </ul>
+            </div>
         </section>
 <!-- ============================== END TEAM ============================== -->       
     </main>
 
     <!-- ============================== FOOTER ============================== -->
-    <div class="footer-bg">
-        <footer class="footer container">
+    <footer class="footer">
+        <div class="footer-content container">
             <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
             <address class="adr">
                 <ul class="adr-list list">
@@ -160,8 +176,8 @@
                     </li>
                 </ul>
             </address>
-        </footer>
-    </div>
+        </div>
+    </footer>
 <!-- ============================== END FOOTER ============================== -->  
     
 </body>
