--- a/portfolio.html
+++ b/portfolio.html
@@ -74,80 +74,99 @@
                         alt="Страница вебсайта"
                         width="370"
                         height="294">
-                    <h3 class="projects-img-title">Технокряк</h3>
-                    <p class="projects-img-text">Вебсайт</p>
+                    <div class="projects-img-thumb">
+                        <h3 class="projects-img-title">Технокряк</h3>
+                        <p class="projects-img-text">Вебсайт</p>
+                    </div>
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img2.jpg"
                         alt="Два баскетболиста"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="projects-img-text">Дизайн</p>
+                        height="294">
+                        <div class="projects-img-thumb">
+                            <h3 class="projects-img-title">Постер New Orlean vs Golden Star</h3>
+                            <p class="projects-img-text">Дизайн</p>
+                        </div>                    
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img3.jpg"
                         alt="Логотип ресторана Seafood"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Ресторан Seafood</h3>
-                    <p class="projects-img-text">Приложение</p>
+                        height="294">
+                        <div class="projects-img-thumb">
+                            <h3 class="projects-img-title">Ресторан Seafood</h3>
+                            <p class="projects-img-text">Приложение</p>
+                        </div>                    
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img4.jpg"
                         alt="Наушники"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Проект Prime</h3>
-                    <p class="projects-img-text">Маркетинг</p>
+                        height="294">
+                    <div class="projects-img-thumb">
+                        <h3 class="projects-img-title">Проект Prime</h3>
+                        <p class="projects-img-text">Маркетинг</p>
+                    </div> 
+                    
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img5.jpg"
                         alt="Две картонные коробочки"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Проект Boxes</h3>
-                    <p class="projects-img-text">Приложение</p>
+                        height="294">
+                    <div class="projects-img-thumb">
+                        <h3 class="projects-img-title">Проект Boxes</h3>
+                        <p class="projects-img-text">Приложение</p>
+                    </div>
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img6.jpg"
                         alt="Монитор компьютера"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Inspiration has no Borders</h3>
-                    <p class="projects-img-text">Веб-сайт</p>
+                        height="294">
+                    <div class="projects-img-thumb">
+                        <h3 class="projects-img-title">Inspiration has no Borders</h3>
+                        <p class="projects-img-text">Веб-сайт</p>
+                    </div>                    
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img7.jpg"
                         alt="Открытая книга"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Издание Limited Edition</h3>
-                    <p class="projects-img-text">Дизайн</p>
+                        height="294">
+                    <div class="projects-img-thumb">
+                        <h3 class="projects-img-title">Издание Limited Edition</h3>
+                        <p class="projects-img-text">Дизайн</p>
+                    </div>                    
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img8.jpg"
                         alt="Тэг с надписью LAB EL TAG"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Проект LAB</h3>
-                    <p class="projects-img-text">Маркетинг</p>
+                        height="294">
+                    <div class="projects-img-thumb">
+                        <h3 class="projects-img-title">Проект LAB</h3>
+                        <p class="projects-img-text">Маркетинг</p>
+                    </div>                  
                 </li>
                 <li class="projects-list-item">
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img9.jpg"
                         alt="Ноутбук"
                         width="370"
-                        height="292">
-                    <h3 class="projects-img-title">Growing Business</h3>
-                    <p class="projects-img-text">Приложение</p>
+                        height="294">
+                    <div class="projects-img-thumb">
+                        <h3 class="projects-img-title">Growing Business</h3>
+                        <p class="projects-img-text">Приложение</p>
+                    </div>                    
                 </li>          
             </ul>
             <!-- ============================== END PROJECTS ============================== -->
